--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ html, body, main, section {
 #canvas {
     width: 800px;
     height: 600px;
-    background: rgb(27, 27, 27);
+    background: rgb(0, 0, 0);
     box-shadow: 0px 0px 15px #272727;
     margin: auto;
     display: block;
@@ -20,4 +20,11 @@ html, body, main, section {
 
 #canvas > audio {
     display: none;
+}
+
+#canvas > canvas {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px;
 }
